# WeatherOne

./: .gitignore  CMakeLists.txt  LICENSE  README.md  schema.sql  vcpkg.json
src/: App.jsx  AuthService.cpp  AuthService.h  Database.cpp  Database.h  HttpServer.cpp  HttpServer.h  SessionManager.cpp  SessionManager.h  User.cpp  User.h  WeatherClient.cpp  WeatherClient.h  main.cpp
weather-react/: package-lock.json  package.json
weather-react/src/: App.jsx  api.js  mockApi.js
